Robot minor efficiency: new Integer -> Integer.valueOf for map gets